<resources>
    <string name="app_name">Notes</string>
    <string name="title_home">Home</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="loading">Loading</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_image">Add Image</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="camera_denied">\u00A0Camera permission not granted\u00A0</string>
    <string name="external_storage_denied">\u00A0Write external storage permission not granted\u00A0</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_desc">Enter Description</string>
</resources>