<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.notes.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_add_edit"
            app:destination="@id/navigation_add_edit" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_view_note"
            app:destination="@id/navigation_view_note" />
    </fragment>

    <fragment
        android:id="@+id/navigation_view_note"
        android:name="com.example.notes.ui.viewnote.ViewNoteFragment"
        android:label="@string/note"
        tools:layout="@layout/fragment_view_note">
        <argument
            android:name="noteId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_edit"
        android:name="com.example.notes.ui.addedit.AddEditFragment"
        android:label="@string/add_note"
        tools:layout="@layout/fragment_add_edit">
        <argument
            android:name="noteId"
            app:argType="long" />
        <argument
            android:name="actionType"
            android:defaultValue="NEW"
            app:argType="com.example.notes.constants.NoteType" />
    </fragment>
</navigation>