<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.addedit.AddEditFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_dark">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                android:tint="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/add_note"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <com.example.notes.customview.CustomImageView
                    android:id="@+id/imgNote"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@android:drawable/ic_menu_gallery" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_image" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/title"
                    android:inputType="textPersonName"
                    android:maxLength="40"
                    android:padding="10dp"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto_medium" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/description"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/submit" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>